      around a regex, which defers compilation until first use. 
      (John Arbash Meinel)

    * ``TestCase.run_bzr_subprocess`` defaults to supplying the
      ``--no-plugins`` parameter to ensure test reproducability, and avoid
      problems with system-wide installed plugins. (John Arbash Meinel)

  BUG FIXES:

    * Give nicer error message when an http server returns a 403
      error code. (Vincent Ladeuil, # 57644).

    * Don't require ``Content-Type`` in range responses. Assume they are a
      single range if ``Content-Type`` does not exist.
      (John Arbash Meinel, #62473)

    * bzr branch/pull no longer complain about progress bar cleanup when
      interrupted during fetch.  (Aaron Bentley, #54000)

    * ``WorkingTree.set_parent_trees()`` uses the trees to directly write
      the basis inventory, rather than going through the repository. This
      allows us to have 1 inventory read, and 2 inventory writes when
      committing a new tree. (John Arbash Meinel)

    * When reverting, files that are not locally modified that do not exist
      in the target are deleted, not just unversioned (Aaron Bentley)

    * When trying to acquire a lock, don't fail immediately. Instead, try
      a few times (up to 1 hour) before timing out. Also, report why the
      lock is unavailable (John Arbash Meinel, #43521, #49556)

    * Leave HttpTransportBase daughter classes decides how they
      implement cloning. (Vincent Ladeuil, #61606)

   * diff3 does not indicate conflicts on clean merge. (Aaron Bentley)

  TESTING:

    * New test base class TestCaseWithMemoryTransport offers memory-only
      testing facilities: its not suitable for tests that need to mutate disk
      state, but most tests should not need that and should be converted to
      TestCaseWithMemoryTransport. (Robert Collins)

    * TestingHTTPRequestHandler really handles the Range header
      (previously it was ignoring it and returning the whole file,).
