@@ -40,7 +40,12 @@ IN DEVELOPMENT
   BUG FIXES:
 
     * Give nicer error message when an http server returns a 403
-      error code. (Vincent Ladeuil, # 57644).
+      error code. (Vincent Ladeuil, #57644).
+
+    * When a multi-range http GET request fails, try a single
+      range one. If it fails too, forget about ranges. Remember that until 
+      the death of the transport and propagates that to the clones.
+      (Vincent Ladeuil, #62276, #62029).
 
     * Don't require ``Content-Type`` in range responses. Assume they are a
       single range if ``Content-Type`` does not exist.
